compilador/tp3.output
Terminals unused in grammar

   '^'
   "++"
   "--"
   "sizeof"


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: sentInicial

    4 sentInicial: sentCompuesta
    5            | declaracionConError

    6 sentencia: sentCompuesta
    7          | sentSeleccion
    8          | sentIteracion
    9          | sentSalto
   10          | sentExpresion
   11          | declaracion

   12 sentCompuesta: '{' cuerpoSentenciaCompuesta llaveCierre

   13 cuerpoSentenciaCompuesta: cuerpoSentenciaCompuesta sentencia
   14                         | sentencia

   15 decSimples: TIPO_DE_DATO listaVarSimple puntoYComa

   16 listaVarSimple: listaVarSimple ',' cadenaAsignacion
   17               | cadenaAsignacion

   18 cadenaAsignacion: unaVarSimple

   19 lvalue: IDENTIFICADOR
   20       | IDENTIFICADOR '[' constanteEntera ']'
   21       | IDENTIFICADOR '[' error ']'
   22       | IDENTIFICADOR '[' constanteEntera error

   23 unaVarSimple: lvalue
   24             | lvalue '=' expresion
   25             | error '=' expresion
   26             | lvalue '=' error

   27 decFuncion: TIPO_DE_DATO ident '(' listaArgumentosFunc parentesisCierre cuerpoFuncion

   28 cuerpoFuncion: ';'
   29              | sentCompuesta

   30 ident: IDENTIFICADOR

   31 listaArgumentosFunc: /* vacío */
   32                    | argumento
   33                    | listaArgumentosFunc ',' argumento

   34 argumento: TIPO_DE_DATO nombreArgumento

   35 nombreArgumento: IDENTIFICADOR

   36 sentExpresion: ';'
   37              | expresion puntoYComa
   38              | error ';'

   39 sentSeleccion: IF '(' expresion parentesisCierre '{' sentencia llaveCierre opcionELSE
   40              | IF '(' expresion parentesisCierre '{' sentencia error opcionELSE
   41              | IF '(' expresion parentesisCierre '{' llaveCierre opcionELSE
   42              | SWITCH '(' expresion parentesisCierre sentenciaSwitch

   43 opcionELSE: /* vacío */
   44           | ELSE sentencia

   45 sentenciaSwitch: '{' sentenciaCase sentenciaSwitchDefault llaveCierre
   46                | '{' sentenciaCase llaveCierre
   47                | '{' sentenciaSwitchDefault llaveCierre
   48                | '{' llaveCierre

   49 sentenciaSwitchDefault: DEFAULT ':' sentencia

   50 sentenciaCase: CASE constanteEntera ':' sentencia

   51 sentIteracion: WHILE '(' expresion parentesisCierre sentencia
   52              | DO sentencia WHILE '(' expresion parentesisCierre puntoYComa
   53              | FOR '(' expresion puntoYComa expresion puntoYComa expresion parentesisCierre sentencia
   54              | FOR '(' puntoYComa expresion puntoYComa expresion parentesisCierre sentencia
   55              | FOR '(' puntoYComa puntoYComa expresion parentesisCierre sentencia
   56              | FOR '(' puntoYComa puntoYComa parentesisCierre sentencia

   57 sentSalto: BREAK puntoYComa
   58          | RETURN puntoYComa
   59          | RETURN expresion puntoYComa
   60          | CONTINUE puntoYComa

   61 expresion: expAsignacion

   62 expAsignacion: expCondicional
   63              | expUnaria OPER_ASIGNACION expAsignacion
   64              | expUnaria '=' expresion

   65 expCondicional: expOr
   66               | expOr '?' expresion ':' expCondicional

   67 expOr: expOr OPER_OR expAnd
   68      | expAnd

   69 expAnd: expAnd OPER_AND expIgualdad
   70       | expIgualdad

   71 expIgualdad: expIgualdad OPER_IGUALDAD expRelacion
   72            | expRelacion

   73 expRelacion: expRelacion OPER_RELACION expAditiva
   74            | expAditiva

   75 expAditiva: expAditiva '+' expMultiplicativa
   76           | expAditiva '-' expMultiplicativa
   77           | expMultiplicativa

   78 expMultiplicativa: expMultiplicativa '*' expUnaria
   79                  | expMultiplicativa '/' expUnaria
   80                  | expUnaria

   81 expUnaria: OPERADOR_UNARIO expUnaria
   82          | expUnaria OPERADOR_UNARIO
   83          | SIZE_OF '(' nombreTipo parentesisCierre
   84          | expPostfijo

   85 expPostfijo: expPostfijo '[' expresion ']'
   86            | expPostfijo '(' listaArgumentos parentesisCierre
   87            | expPrimaria

   88 declaracion: decSimples

   89 declaracionConError: decSimples
   90                    | decFuncion
   91                    | error

   92 listaArgumentos: listaArgumentos ',' expresion
   93                | expresion

   94 nombreTipo: TIPO_DE_DATO

   95 parentesisCierre: ')'

   96 llaveCierre: '}'

   97 puntoYComa: ';'
   98           | error

   99 expPrimaria: IDENTIFICADOR
  100            | constanteNumerica
  101            | LITERAL_CADENA
  102            | CARACTER
  103            | '(' expresion parentesisCierre

  104 constanteNumerica: constanteEntera
  105                  | CONSTANTE_REAL

  106 constanteEntera: CONSTANTE_DECIMAL
  107                | CONSTANTE_OCTAL
  108                | CONSTANTE_HEXA


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 27 39 40 41 42 51 52 53 54 55 56 83 86 103
')' (41) 95
'*' (42) 78
'+' (43) 75
',' (44) 16 33 92
'-' (45) 76
'/' (47) 79
':' (58) 49 50 66
';' (59) 28 36 38 97
'=' (61) 24 25 26 64
'?' (63) 66
'[' (91) 20 21 22 85
']' (93) 20 21 85
'^' (94)
'{' (123) 12 39 40 41 45 46 47 48
'}' (125) 96
error (256) 21 22 25 26 38 40 91 98
TIPO_DE_DATO (258) 15 27 34 94
OPERADOR_UNARIO (259) 81 82
OPER_ASIGNACION (260) 63
OPER_IGUALDAD (261) 71
OPER_OR (262) 67
OPER_AND (263) 69
OPER_RELACION (264) 73
IDENTIFICADOR (265) 19 20 21 22 30 35 99
CARACTER (266) 102
SIZE_OF (267) 83
IF (268) 39 40 41
ELSE (269) 44
RETURN (270) 58 59
BREAK (271) 57
CONTINUE (272) 60
FOR (273) 53 54 55 56
DO (274) 52
WHILE (275) 51 52
SWITCH (276) 42
LITERAL_CADENA (277) 101
CASE (278) 50
DEFAULT (279) 49
CONSTANTE_OCTAL (280) 107
CONSTANTE_HEXA (281) 108
CONSTANTE_REAL (282) 105
CONSTANTE_DECIMAL (283) 106
"++" (284)
"--" (285)
"sizeof" (286)


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
input (49)
    en la izquierda: 1 2, en la derecha: 0 2
line (50)
    en la izquierda: 3, en la derecha: 2
sentInicial (51)
    en la izquierda: 4 5, en la derecha: 3
sentencia (52)
    en la izquierda: 6 7 8 9 10 11, en la derecha: 13 14 39 40 44 49
    50 51 52 53 54 55 56
sentCompuesta (53)
    en la izquierda: 12, en la derecha: 4 6 29
cuerpoSentenciaCompuesta (54)
    en la izquierda: 13 14, en la derecha: 12 13
decSimples (55)
    en la izquierda: 15, en la derecha: 88 89
listaVarSimple (56)
    en la izquierda: 16 17, en la derecha: 15 16
cadenaAsignacion (57)
    en la izquierda: 18, en la derecha: 16 17
lvalue (58)
    en la izquierda: 19 20 21 22, en la derecha: 23 24 26
unaVarSimple (59)
    en la izquierda: 23 24 25 26, en la derecha: 18
decFuncion (60)
    en la izquierda: 27, en la derecha: 90
cuerpoFuncion (61)
    en la izquierda: 28 29, en la derecha: 27
ident (62)
    en la izquierda: 30, en la derecha: 27
listaArgumentosFunc (63)
    en la izquierda: 31 32 33, en la derecha: 27 33
argumento (64)
    en la izquierda: 34, en la derecha: 32 33
nombreArgumento (65)
    en la izquierda: 35, en la derecha: 34
sentExpresion (66)
    en la izquierda: 36 37 38, en la derecha: 10
sentSeleccion (67)
    en la izquierda: 39 40 41 42, en la derecha: 7
opcionELSE (68)
    en la izquierda: 43 44, en la derecha: 39 40 41
sentenciaSwitch (69)
    en la izquierda: 45 46 47 48, en la derecha: 42
sentenciaSwitchDefault (70)
    en la izquierda: 49, en la derecha: 45 47
sentenciaCase (71)
    en la izquierda: 50, en la derecha: 45 46
sentIteracion (72)
    en la izquierda: 51 52 53 54 55 56, en la derecha: 8
sentSalto (73)
    en la izquierda: 57 58 59 60, en la derecha: 9
expresion (74)
    en la izquierda: 61, en la derecha: 24 25 37 39 40 41 42 51 52
    53 54 55 59 64 66 85 92 93 103
expAsignacion (75)
    en la izquierda: 62 63 64, en la derecha: 61 63
expCondicional (76)
    en la izquierda: 65 66, en la derecha: 62 66
expOr (77)
    en la izquierda: 67 68, en la derecha: 65 66 67
expAnd (78)
    en la izquierda: 69 70, en la derecha: 67 68 69
expIgualdad (79)
    en la izquierda: 71 72, en la derecha: 69 70 71
expRelacion (80)
    en la izquierda: 73 74, en la derecha: 71 72 73
expAditiva (81)
    en la izquierda: 75 76 77, en la derecha: 73 74 75 76
expMultiplicativa (82)
    en la izquierda: 78 79 80, en la derecha: 75 76 77 78 79
expUnaria (83)
    en la izquierda: 81 82 83 84, en la derecha: 63 64 78 79 80 81
    82
expPostfijo (84)
    en la izquierda: 85 86 87, en la derecha: 84 85 86
declaracion (85)
    en la izquierda: 88, en la derecha: 11
declaracionConError (86)
    en la izquierda: 89 90 91, en la derecha: 5
listaArgumentos (87)
    en la izquierda: 92 93, en la derecha: 86 92
nombreTipo (88)
    en la izquierda: 94, en la derecha: 83
parentesisCierre (89)
    en la izquierda: 95, en la derecha: 27 39 40 41 42 51 52 53 54
    55 56 83 86 103
llaveCierre (90)
    en la izquierda: 96, en la derecha: 12 39 41 45 46 47 48
puntoYComa (91)
    en la izquierda: 97 98, en la derecha: 15 37 52 53 54 55 56 57
    58 59 60
expPrimaria (92)
    en la izquierda: 99 100 101 102 103, en la derecha: 87
constanteNumerica (93)
    en la izquierda: 104 105, en la derecha: 100
constanteEntera (94)
    en la izquierda: 106 107 108, en la derecha: 20 22 50 104


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end          desplazar e ir al estado 2
    error         desplazar e ir al estado 3
    TIPO_DE_DATO  desplazar e ir al estado 4
    '{'           desplazar e ir al estado 5

    line                 ir al estado 6
    sentInicial          ir al estado 7
    sentCompuesta        ir al estado 8
    decSimples           ir al estado 9
    decFuncion           ir al estado 10
    declaracionConError  ir al estado 11


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   91 declaracionConError: error .

    $default  reduce usando la regla 91 (declaracionConError)


estado 4

   15 decSimples: TIPO_DE_DATO . listaVarSimple puntoYComa
   27 decFuncion: TIPO_DE_DATO . ident '(' listaArgumentosFunc parentesisCierre cuerpoFuncion

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 13

    listaVarSimple    ir al estado 14
    cadenaAsignacion  ir al estado 15
    lvalue            ir al estado 16
    unaVarSimple      ir al estado 17
    ident             ir al estado 18


estado 5

   12 sentCompuesta: '{' . cuerpoSentenciaCompuesta llaveCierre

    error              desplazar e ir al estado 19
    TIPO_DE_DATO       desplazar e ir al estado 20
    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    IF                 desplazar e ir al estado 25
    RETURN             desplazar e ir al estado 26
    BREAK              desplazar e ir al estado 27
    CONTINUE           desplazar e ir al estado 28
    FOR                desplazar e ir al estado 29
    DO                 desplazar e ir al estado 30
    WHILE              desplazar e ir al estado 31
    SWITCH             desplazar e ir al estado 32
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38
    '{'                desplazar e ir al estado 5
    ';'                desplazar e ir al estado 39

    sentencia                 ir al estado 40
    sentCompuesta             ir al estado 41
    cuerpoSentenciaCompuesta  ir al estado 42
    decSimples                ir al estado 43
    sentExpresion             ir al estado 44
    sentSeleccion             ir al estado 45
    sentIteracion             ir al estado 46
    sentSalto                 ir al estado 47
    expresion                 ir al estado 48
    expAsignacion             ir al estado 49
    expCondicional            ir al estado 50
    expOr                     ir al estado 51
    expAnd                    ir al estado 52
    expIgualdad               ir al estado 53
    expRelacion               ir al estado 54
    expAditiva                ir al estado 55
    expMultiplicativa         ir al estado 56
    expUnaria                 ir al estado 57
    expPostfijo               ir al estado 58
    declaracion               ir al estado 59
    expPrimaria               ir al estado 60
    constanteNumerica         ir al estado 61
    constanteEntera           ir al estado 62


estado 6

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 7

    3 line: sentInicial .

    $default  reduce usando la regla 3 (line)


estado 8

    4 sentInicial: sentCompuesta .

    $default  reduce usando la regla 4 (sentInicial)


estado 9

   89 declaracionConError: decSimples .

    $default  reduce usando la regla 89 (declaracionConError)


estado 10

   90 declaracionConError: decFuncion .

    $default  reduce usando la regla 90 (declaracionConError)


estado 11

    5 sentInicial: declaracionConError .

    $default  reduce usando la regla 5 (sentInicial)


estado 12

   25 unaVarSimple: error . '=' expresion

    '='  desplazar e ir al estado 63


estado 13

   19 lvalue: IDENTIFICADOR .
   20       | IDENTIFICADOR . '[' constanteEntera ']'
   21       | IDENTIFICADOR . '[' error ']'
   22       | IDENTIFICADOR . '[' constanteEntera error
   30 ident: IDENTIFICADOR .

    '['  desplazar e ir al estado 64

    '('       reduce usando la regla 30 (ident)
    $default  reduce usando la regla 19 (lvalue)


estado 14

   15 decSimples: TIPO_DE_DATO listaVarSimple . puntoYComa
   16 listaVarSimple: listaVarSimple . ',' cadenaAsignacion

    error  desplazar e ir al estado 65
    ','    desplazar e ir al estado 66
    ';'    desplazar e ir al estado 67

    puntoYComa  ir al estado 68


estado 15

   17 listaVarSimple: cadenaAsignacion .

    $default  reduce usando la regla 17 (listaVarSimple)


estado 16

   23 unaVarSimple: lvalue .
   24             | lvalue . '=' expresion
   26             | lvalue . '=' error

    '='  desplazar e ir al estado 69

    $default  reduce usando la regla 23 (unaVarSimple)


estado 17

   18 cadenaAsignacion: unaVarSimple .

    $default  reduce usando la regla 18 (cadenaAsignacion)


estado 18

   27 decFuncion: TIPO_DE_DATO ident . '(' listaArgumentosFunc parentesisCierre cuerpoFuncion

    '('  desplazar e ir al estado 70


estado 19

   38 sentExpresion: error . ';'

    ';'  desplazar e ir al estado 71


estado 20

   15 decSimples: TIPO_DE_DATO . listaVarSimple puntoYComa

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 72

    listaVarSimple    ir al estado 14
    cadenaAsignacion  ir al estado 15
    lvalue            ir al estado 16
    unaVarSimple      ir al estado 17


estado 21

   81 expUnaria: OPERADOR_UNARIO . expUnaria

    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38

    expUnaria          ir al estado 73
    expPostfijo        ir al estado 58
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 22

   99 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 99 (expPrimaria)


estado 23

  102 expPrimaria: CARACTER .

    $default  reduce usando la regla 102 (expPrimaria)


estado 24

   83 expUnaria: SIZE_OF . '(' nombreTipo parentesisCierre

    '('  desplazar e ir al estado 74


estado 25

   39 sentSeleccion: IF . '(' expresion parentesisCierre '{' sentencia llaveCierre opcionELSE
   40              | IF . '(' expresion parentesisCierre '{' sentencia error opcionELSE
   41              | IF . '(' expresion parentesisCierre '{' llaveCierre opcionELSE

    '('  desplazar e ir al estado 75


estado 26

   58 sentSalto: RETURN . puntoYComa
   59          | RETURN . expresion puntoYComa

    error              desplazar e ir al estado 65
    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38
    ';'                desplazar e ir al estado 67

    expresion          ir al estado 76
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    puntoYComa         ir al estado 77
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 27

   57 sentSalto: BREAK . puntoYComa

    error  desplazar e ir al estado 65
    ';'    desplazar e ir al estado 67

    puntoYComa  ir al estado 78


estado 28

   60 sentSalto: CONTINUE . puntoYComa

    error  desplazar e ir al estado 65
    ';'    desplazar e ir al estado 67

    puntoYComa  ir al estado 79


estado 29

   53 sentIteracion: FOR . '(' expresion puntoYComa expresion puntoYComa expresion parentesisCierre sentencia
   54              | FOR . '(' puntoYComa expresion puntoYComa expresion parentesisCierre sentencia
   55              | FOR . '(' puntoYComa puntoYComa expresion parentesisCierre sentencia
   56              | FOR . '(' puntoYComa puntoYComa parentesisCierre sentencia

    '('  desplazar e ir al estado 80


estado 30

   52 sentIteracion: DO . sentencia WHILE '(' expresion parentesisCierre puntoYComa

    error              desplazar e ir al estado 19
    TIPO_DE_DATO       desplazar e ir al estado 20
    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    IF                 desplazar e ir al estado 25
    RETURN             desplazar e ir al estado 26
    BREAK              desplazar e ir al estado 27
    CONTINUE           desplazar e ir al estado 28
    FOR                desplazar e ir al estado 29
    DO                 desplazar e ir al estado 30
    WHILE              desplazar e ir al estado 31
    SWITCH             desplazar e ir al estado 32
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38
    '{'                desplazar e ir al estado 5
    ';'                desplazar e ir al estado 39

    sentencia          ir al estado 81
    sentCompuesta      ir al estado 41
    decSimples         ir al estado 43
    sentExpresion      ir al estado 44
    sentSeleccion      ir al estado 45
    sentIteracion      ir al estado 46
    sentSalto          ir al estado 47
    expresion          ir al estado 48
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    declaracion        ir al estado 59
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 31

   51 sentIteracion: WHILE . '(' expresion parentesisCierre sentencia

    '('  desplazar e ir al estado 82


estado 32

   42 sentSeleccion: SWITCH . '(' expresion parentesisCierre sentenciaSwitch

    '('  desplazar e ir al estado 83


estado 33

  101 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 101 (expPrimaria)


estado 34

  107 constanteEntera: CONSTANTE_OCTAL .

    $default  reduce usando la regla 107 (constanteEntera)


estado 35

  108 constanteEntera: CONSTANTE_HEXA .

    $default  reduce usando la regla 108 (constanteEntera)


estado 36

  105 constanteNumerica: CONSTANTE_REAL .

    $default  reduce usando la regla 105 (constanteNumerica)


estado 37

  106 constanteEntera: CONSTANTE_DECIMAL .

    $default  reduce usando la regla 106 (constanteEntera)


estado 38

  103 expPrimaria: '(' . expresion parentesisCierre

    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38

    expresion          ir al estado 84
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 39

   36 sentExpresion: ';' .

    $default  reduce usando la regla 36 (sentExpresion)


estado 40

   14 cuerpoSentenciaCompuesta: sentencia .

    $default  reduce usando la regla 14 (cuerpoSentenciaCompuesta)


estado 41

    6 sentencia: sentCompuesta .

    $default  reduce usando la regla 6 (sentencia)


estado 42

   12 sentCompuesta: '{' cuerpoSentenciaCompuesta . llaveCierre
   13 cuerpoSentenciaCompuesta: cuerpoSentenciaCompuesta . sentencia

    error              desplazar e ir al estado 19
    TIPO_DE_DATO       desplazar e ir al estado 20
    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    IF                 desplazar e ir al estado 25
    RETURN             desplazar e ir al estado 26
    BREAK              desplazar e ir al estado 27
    CONTINUE           desplazar e ir al estado 28
    FOR                desplazar e ir al estado 29
    DO                 desplazar e ir al estado 30
    WHILE              desplazar e ir al estado 31
    SWITCH             desplazar e ir al estado 32
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38
    '{'                desplazar e ir al estado 5
    ';'                desplazar e ir al estado 39
    '}'                desplazar e ir al estado 85

    sentencia          ir al estado 86
    sentCompuesta      ir al estado 41
    decSimples         ir al estado 43
    sentExpresion      ir al estado 44
    sentSeleccion      ir al estado 45
    sentIteracion      ir al estado 46
    sentSalto          ir al estado 47
    expresion          ir al estado 48
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    declaracion        ir al estado 59
    llaveCierre        ir al estado 87
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 43

   88 declaracion: decSimples .

    $default  reduce usando la regla 88 (declaracion)


estado 44

   10 sentencia: sentExpresion .

    $default  reduce usando la regla 10 (sentencia)


estado 45

    7 sentencia: sentSeleccion .

    $default  reduce usando la regla 7 (sentencia)


estado 46

    8 sentencia: sentIteracion .

    $default  reduce usando la regla 8 (sentencia)


estado 47

    9 sentencia: sentSalto .

    $default  reduce usando la regla 9 (sentencia)


estado 48

   37 sentExpresion: expresion . puntoYComa

    error  desplazar e ir al estado 65
    ';'    desplazar e ir al estado 67

    puntoYComa  ir al estado 88


estado 49

   61 expresion: expAsignacion .

    $default  reduce usando la regla 61 (expresion)


estado 50

   62 expAsignacion: expCondicional .

    $default  reduce usando la regla 62 (expAsignacion)


estado 51

   65 expCondicional: expOr .
   66               | expOr . '?' expresion ':' expCondicional
   67 expOr: expOr . OPER_OR expAnd

    OPER_OR  desplazar e ir al estado 89
    '?'      desplazar e ir al estado 90

    $default  reduce usando la regla 65 (expCondicional)


estado 52

   68 expOr: expAnd .
   69 expAnd: expAnd . OPER_AND expIgualdad

    OPER_AND  desplazar e ir al estado 91

    $default  reduce usando la regla 68 (expOr)


estado 53

   70 expAnd: expIgualdad .
   71 expIgualdad: expIgualdad . OPER_IGUALDAD expRelacion

    OPER_IGUALDAD  desplazar e ir al estado 92

    $default  reduce usando la regla 70 (expAnd)


estado 54

   72 expIgualdad: expRelacion .
   73 expRelacion: expRelacion . OPER_RELACION expAditiva

    OPER_RELACION  desplazar e ir al estado 93

    $default  reduce usando la regla 72 (expIgualdad)


estado 55

   74 expRelacion: expAditiva .
   75 expAditiva: expAditiva . '+' expMultiplicativa
   76           | expAditiva . '-' expMultiplicativa

    '+'  desplazar e ir al estado 94
    '-'  desplazar e ir al estado 95

    $default  reduce usando la regla 74 (expRelacion)


estado 56

   77 expAditiva: expMultiplicativa .
   78 expMultiplicativa: expMultiplicativa . '*' expUnaria
   79                  | expMultiplicativa . '/' expUnaria

    '*'  desplazar e ir al estado 96
    '/'  desplazar e ir al estado 97

    $default  reduce usando la regla 77 (expAditiva)


estado 57

   63 expAsignacion: expUnaria . OPER_ASIGNACION expAsignacion
   64              | expUnaria . '=' expresion
   80 expMultiplicativa: expUnaria .
   82 expUnaria: expUnaria . OPERADOR_UNARIO

    OPERADOR_UNARIO  desplazar e ir al estado 98
    OPER_ASIGNACION  desplazar e ir al estado 99
    '='              desplazar e ir al estado 100

    $default  reduce usando la regla 80 (expMultiplicativa)


estado 58

   84 expUnaria: expPostfijo .
   85 expPostfijo: expPostfijo . '[' expresion ']'
   86            | expPostfijo . '(' listaArgumentos parentesisCierre

    '('  desplazar e ir al estado 101
    '['  desplazar e ir al estado 102

    $default  reduce usando la regla 84 (expUnaria)


estado 59

   11 sentencia: declaracion .

    $default  reduce usando la regla 11 (sentencia)


estado 60

   87 expPostfijo: expPrimaria .

    $default  reduce usando la regla 87 (expPostfijo)


estado 61

  100 expPrimaria: constanteNumerica .

    $default  reduce usando la regla 100 (expPrimaria)


estado 62

  104 constanteNumerica: constanteEntera .

    $default  reduce usando la regla 104 (constanteNumerica)


estado 63

   25 unaVarSimple: error '=' . expresion

    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38

    expresion          ir al estado 103
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 64

   20 lvalue: IDENTIFICADOR '[' . constanteEntera ']'
   21       | IDENTIFICADOR '[' . error ']'
   22       | IDENTIFICADOR '[' . constanteEntera error

    error              desplazar e ir al estado 104
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_DECIMAL  desplazar e ir al estado 37

    constanteEntera  ir al estado 105


estado 65

   98 puntoYComa: error .

    $default  reduce usando la regla 98 (puntoYComa)


estado 66

   16 listaVarSimple: listaVarSimple ',' . cadenaAsignacion

    error          desplazar e ir al estado 12
    IDENTIFICADOR  desplazar e ir al estado 72

    cadenaAsignacion  ir al estado 106
    lvalue            ir al estado 16
    unaVarSimple      ir al estado 17


estado 67

   97 puntoYComa: ';' .

    $default  reduce usando la regla 97 (puntoYComa)


estado 68

   15 decSimples: TIPO_DE_DATO listaVarSimple puntoYComa .

    $default  reduce usando la regla 15 (decSimples)


estado 69

   24 unaVarSimple: lvalue '=' . expresion
   26             | lvalue '=' . error

    error              desplazar e ir al estado 107
    OPERADOR_UNARIO    desplazar e ir al estado 21
    IDENTIFICADOR      desplazar e ir al estado 22
    CARACTER           desplazar e ir al estado 23
    SIZE_OF            desplazar e ir al estado 24
    LITERAL_CADENA     desplazar e ir al estado 33
    CONSTANTE_OCTAL    desplazar e ir al estado 34
    CONSTANTE_HEXA     desplazar e ir al estado 35
    CONSTANTE_REAL     desplazar e ir al estado 36
    CONSTANTE_DECIMAL  desplazar e ir al estado 37
    '('                desplazar e ir al estado 38

    expresion          ir al estado 108
    expAsignacion      ir al estado 49
    expCondicional     ir al estado 50
    expOr              ir al estado 51
    expAnd             ir al estado 52
    expIgualdad        ir al estado 53
    expRelacion        ir al estado 54
    expAditiva         ir al estado 55
    expMultiplicativa  ir al estado 56
    expUnaria          ir al estado 57
    expPostfijo        ir al estado 58
    expPrimaria        ir al estado 60
    constanteNumerica  ir al estado 61
    constanteEntera    ir al estado 62


estado 70

   27 decFuncion: TIPO_DE_DATO ident '(' . listaArgumentosFunc parentesisCierre cuerpoFuncion

    TIPO_DE_DATO  desplazar e ir al estado 109

    $default  reduce usando la regla 31 (listaArgumentosFunc)

    listaArgumentosFunc  ir al estado 110
    argumento            ir al estado 111


estado 71

   38 sentExpresion: error ';' .
